Fix crop box boundaries by wrapping image in sized container

--- a/src/index.css
+++ b/src/index.css
@@ -339,20 +339,15 @@ input[type="range"].slider::-moz-range-thumb:hover {
   direction: ltr;
   font-size: 0;
   line-height: 0;
-  position: absolute !important;
-  top: 0 !important;
-  left: 0 !important;
-  right: 0 !important;
-  bottom: 0 !important;
-  width: 100% !important;
-  height: 100% !important;
+  position: relative !important;
   -ms-touch-action: none !important;
   touch-action: none !important;
   -webkit-user-select: none !important;
   -moz-user-select: none !important;
   -ms-user-select: none !important;
   user-select: none !important;
-  overflow: hidden !important;
+  overflow: visible !important;
+  display: inline-block !important;
 }
 
 .cropper-container img {
